SERVER-5301 Clear query plan cache when an index becomes multikey.